--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="form-group">
             <label id="keyCountLabel" for="keyCountSelect">Number of keys:</label>
             <select id="keyCountSelect">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
+                <option value="1">12</option>
+                <option value="2">24</option>
+                <option value="3">48</option>
+                <option value="4"><60/option>
                 
             </select>
         </div>
