--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="form-group">
             <label for="gameSelect">Select Game</label>
             <select id="gameSelect">
-                <option value="1">Riding Extreme 3D</option>
-                <option value="2">Chain Cube 2048</option>
-                <option value="3">My Clone Army</option>
-                <option value="4">Train Miner</option>
+                <option value="12">Riding Extreme 3D</option>
+                <option value="24">Chain Cube 2048</option>
+                <option value="48">My Clone Army</option>
+                <option value="60">Train Miner</option>
             </select>
         </div>
         <div class="form-group">
@@ -25,7 +25,7 @@
                 <option value="1">12</option>
                 <option value="2">24</option>
                 <option value="3">48</option>
-                <option value="4"><60/option>
+                <option value="4">60</option>
                 
             </select>
         </div>
